--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/dsvendas
 spring.datasource.username=postgres
-spring.datasource.password=21062001j
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
